# aql

./: .flake8  .gitignore  .pylint  .pyup.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  makefile  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml
aql/: __init__.py  __version__.py  column.py  connector.py  errors.py  query.py  table.py  types.py
aql/engines/: __init__.py  base.py  mysql.py  sql.py  sqlite.py
aql/tests/: __init__.py  __main__.py  column.py  connector.py  engine.py  query.py  smoke.py  table.py  types.py
aql/tests/engines/: __init__.py  base.py  integration.py  mysql.py  sql.py  sqlite.py
docs/: api.rst  conf.py  index.rst  roadmap.rst
